--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,6 +1,6 @@
 <%- include('partials/header') -%>
 
-<main class="container">
+<main class="container fullScreen">
   <div class="row justify-content-center">
     <section class="col-6 mt-5">
       <% if (locals.messages.errors) { %> <% messages.errors.forEach( el => { %>
@@ -31,7 +31,10 @@
             name="password"
           />
         </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
+        <div class="d-flex justify-content-between row-6">
+          <button type="submit" class="btn btn-primary">Submit</button>
+          <a href="/" class="col-3 btn btn-primary width15">Back</a>
+        </div>
       </form>
     </section>
   </div>
