--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,8 +1,8 @@
-<div class="container d-flex justify-content-between mt-5 mbottom3">
-    <a href="/folder" class="noUnderline">My Folder</a>
-    <a href="/feed" class="noUnderline">Public Feed</a>
-    <a href="/logout" class="noUnderline">Logout</a> 
-    <a href="https://mariesmith.me/" class="noUnderline">©Marie Smith</a>
+<div class="container d-flex justify-content-between mt-5 mbottom3 footerText">
+    <a href="/folder" class="noUnderline footerTextColor">My Folder</a>
+    <a href="/feed" class="noUnderline footerTextColor">Public Feed</a>
+    <a href="/logout" class="noUnderline footerTextColor">Logout</a> 
+    <a href="https://mariesmith.me/" class="noUnderline footerTextColor">©Marie Smith</a>
 </div>
     
     
