--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -25,10 +25,10 @@
     />
     <link rel="stylesheet" href="/css/style.css" />
   </head>
-  <body>
+  <body class="backgroundColor">
     <header class="container">
       <div class="text-center">
-        <h1><a href="/folder" class="noUnderline">Praise Folder</a></h1>
+        <h1><a href="/folder" class="noUnderline titleColor">Praise Folder</a></h1>
         <span>The Place to Store Your Feel-Goods</span>
       </div>
     </header>
