--- a/views/feed.ejs
+++ b/views/feed.ejs
@@ -1,11 +1,11 @@
 <%- include('partials/header') -%>
   <div class="container">
     <div class="row justify-content-center mt-5">
-      <h2>Public Feed</h2>
+      <h2 class="greetingColor">Public Feed</h2>
       <ul class="row list-unstyled">
         <% for(var i=0; i<praises.length; i++) {%>
-          <li class="col-6 justify-content-between mt-5">
-            <a href="/praise/<%= praises[i]._id%>" class="noUnderline">
+          <li class="col-6 justify-content-en mt-5">
+            <a href="/praise/<%= praises[i]._id%>" class="noUnderline praiseTitleColor">
               <h5><%= praises[i].title.substring(0, 20) %>...</h5>
               <img class="img-fluid" src="<%= praises[i].image%>">
             </a>
