--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,7 +2,7 @@
 
 <main class="container fullScreen">
     <div class="row justify-content-around mt-5">
-        <a href="/login" class="col-3 btn btn-primary"> Login</a>
-        <a href="/signup" class="col-3 btn btn-primary"> Signup</a>
+        <a href="/login" class="col-3 btn btnColor"> Login</a>
+        <a href="/signup" class="col-3 btn btnColor"> Signup</a>
     </div>
 </main>
