--- a/views/login.ejs
+++ b/views/login.ejs
@@ -32,8 +32,8 @@
           />
         </div>
         <div class="d-flex justify-content-between row-6">
-          <button type="submit" class="btn btn-primary">Submit</button>
-          <a href="/" class="col-3 btn btn-primary width15">Back</a>
+          <button type="submit" class="btn btnColor">Submit</button>
+          <a href="/" class="col-3 btn btnColor width20">Back</a>
         </div>
       </form>
     </section>
