--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -31,8 +31,8 @@
                         <input type="password" class="form-control" id="confirmPassword" name="confirmPassword">
                       </div>
                       <div class="d-flex justify-content-between row-6">
-                        <button type="submit" class="btn btn-primary">Submit</button>
-                        <a href="/" class="col-3 btn btn-primary width15">Back</a>
+                        <button type="submit" class="btn btnColor">Submit</button>
+                        <a href="/" class="col-3 btn btnColor width20">Back</a>
                       </div>
                   </form>
             </section>
