--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -28,7 +28,7 @@
   <body class="backgroundColor">
     <header class="container">
       <div class="text-center">
-        <h1><a href="/folder" class="noUnderline titleColor">Praise Folder</a></h1>
+        <h1 class="mt-4"><a href="/folder" class="noUnderline titleColor">Praise Folder</a></h1>
         <span>The Place to Store Your Feel-Goods</span>
       </div>
     </header>
