--- a/views/praise.ejs
+++ b/views/praise.ejs
@@ -2,8 +2,27 @@
 <div class="container">
   <div class="row justify-content-center mt-5">
     <div class="col-6">
-      <h3><%= praise.user %></h3>
-      <h4><%= praise.title %></h4>
+      <h4><%= praise.user %></h4>
+    
+      <div class="justify-content-between mb-3">
+        <div>
+          <h5 class="mb-3"><%= praise.title %></h5>
+      </div>
+        
+        <%if(praise.user == user.id){ %>
+          <div class="d-flex marginAdjust">
+          <form action="/praise/editPraise/<%= praise.id %>?_method=GET" method="POST" >
+            <button class="btn btnColor fa fa-edit" type="submit"></button>
+          </form>
+
+          <form
+          action="/praise/deletePraise/<%= praise.id %>?_method=DELETE"
+          method="POST" >
+          <button class="btn btnColorHoverRed fa fa-trash ml1rem" type="submit"></button>
+          </form> 
+        </div> 
+        <%}%> 
+      </div>   
 
       <%if(praise.user == user.id){ %>
       
@@ -16,40 +35,32 @@
           </form>
 
         </div>  
-      <%}%>
-
-      <div class="d-flex position-relative">
-        <img class="img-fluid" src="<%= praise.image%>" />
-        <%if(praise.user == user.id){ %>         
-            <form action="/praise/editPraise/<%= praise.id %>?_method=GET" method="POST" >
-              <button class="btn btnColor fa fa-edit picPosition1" type="submit"></button>
-            </form>
-
-            <form
-            action="/praise/deletePraise/<%= praise.id %>?_method=DELETE"
-            method="POST" >
-            <button class="btn btnColor picPosition2 fa fa-trash" type="submit"></button>
-            </form>                
         <%}%>
-    </div>
+
+
+        <div class="d-flex position-relative">
+          <img class="img-fluid" src="<%= praise.image%>" />                
+        </div>
 
       <div class="row justify-content-between">
-        <div class="justify-content-start">
-          <p><%= praise.caption %></p>
-          <div class="d-flex mt-4">
+        <div class="justify-content-between mt-4">
+          <div class="mb-3">
+            <h6><%= praise.caption %></h6>
+          </div>
+          
+          <div class="d-flex marginAdjust">
             <form action="/praise/likePraise/<%= praise.id %>?_method=PUT"
             method="POST">
             <button class="btn btnColorRed fa fa-heart" type="submit"></button>
             </form>
-            <h3 class="ml1rem"><%= praise.likes %> likes</h3>  
+            <p class="ml1rem"><%= praise.likes %> likes</p>  
+          </div>
         </div>       
         </div>
-      </div>
-  
 
     <div class="mt-3">
       <form action="/comment/createComment/<%=praise._id%>" method="POST">
-        <div class="col-6">
+        <div class="col-20">
             <label for="comment" class="form-label">Add a Comment</label>
             <input type="text" class="form-control" id="comment" name="comment">
         </div>
@@ -59,14 +70,14 @@
 
     <ul class="list-unstyled">
       <% for(var i=0; i<comments.length; i++) {%>
-        <li class="col-6 justify-content-between mt-5">
+        <li class="col-20 justify-content-between mt-5">
           <%= comments[i].createdByUsername%> says: "<%= comments[i].comment%>"
 
           <%if (comments[i].createdById == user.id){ %>
           <form
             action="/comment/deleteComment/<%= praise.id %>/<%= comments[i]._id %>?_method=DELETE"
             method="POST">
-            <button class="btn btn-outline-danger" type="submit">Delete</button>
+            <button class="btn btn-outline-danger mt-2" type="submit">Delete</button>
           </form>
           <%}%>
         </li>
