--- a/public/css/style.css
+++ b/public/css/style.css
@@ -67,7 +67,7 @@ light yellow: #FFDB8A */
     color: #039187;
 }
 
-.btnColor {
+.btnColor, .btnColorHoverRed {
     background-color: #20a89e;
 }
 
@@ -78,6 +78,10 @@ light yellow: #FFDB8A */
 
 .btnColor:hover {
     color: #ffffff;
+}
+
+.btnColorHoverRed:hover {
+    color: #FF4571
 }
 
 .picPosition1 {
@@ -94,4 +98,26 @@ light yellow: #FFDB8A */
 .fullScreen {
     height: 100vh;
     width: 100vw;
+}
+
+@media screen and (min-width: 1200px) {
+    .marginAdjust {
+        margin-right: 10rem;
+    }
+}
+
+@media screen and (max-width: 767px) {
+    .phoneCenter {
+        justify-content: center;
+    }
+
+    .phoneWiden {
+        width: 67%;
+    margin-left: 0;
+    margin-top: 0 !important;
+    }
+
+    .marginTop0 {
+        margin-top: 0;
+    }
 }
