--- a/views/login.ejs
+++ b/views/login.ejs
@@ -31,9 +31,9 @@
             name="password"
           />
         </div>
-        <div class="d-flex justify-content-between row-6">
-          <button type="submit" class="btn btnColor">Submit</button>
-          <a href="/" class="col-3 btn btnColor width20">Back</a>
+        <div class="d-flex justify-content-between row-6 phoneDisplay">
+          <button type="submit" class="col-2 btn btnColor">Submit</button>
+          <a href="/" class="col-2 btn btnColor phoneDisplayMT2">Back</a>
         </div>
       </form>
     </section>
