--- a/views/praise.ejs
+++ b/views/praise.ejs
@@ -2,24 +2,19 @@
 <div class="container">
   <div class="row justify-content-center mt-5">
     <div class="col-6">
-      <h4><%= praise.user %></h4>
+      <h4><strong><%= username.userName %>: </strong></h4>
+      <h4 class="mb-3"><%= praise.title %></h4>
     
       <div class="justify-content-between mb-3">
-        <div>
+        <!-- <div>
           <h5 class="mb-3"><%= praise.title %></h5>
-      </div>
+      </div> -->
         
         <%if(praise.user == user.id){ %>
           <div class="d-flex marginAdjust">
           <form action="/praise/editPraise/<%= praise.id %>?_method=GET" method="POST" >
             <button class="btn btnColor fa fa-edit" type="submit"></button>
           </form>
-
-          <form
-          action="/praise/deletePraise/<%= praise.id %>?_method=DELETE"
-          method="POST" >
-          <button class="btn btnColorHoverRed fa fa-trash ml1rem" type="submit"></button>
-          </form> 
         </div> 
         <%}%> 
       </div>   
@@ -45,7 +40,7 @@
       <div class="row justify-content-between">
         <div class="justify-content-between mt-4">
           <div class="mb-3">
-            <h6><%= praise.caption %></h6>
+            <h5><%= praise.caption %></h5>
           </div>
           
           <div class="d-flex marginAdjust">
@@ -77,7 +72,7 @@
           <form
             action="/comment/deleteComment/<%= praise.id %>/<%= comments[i]._id %>?_method=DELETE"
             method="POST">
-            <button class="btn btn-outline-danger mt-2" type="submit">Delete</button>
+            <button class="btn btn-outline-danger mt-2" type="submit">Delete Comment</button>
           </form>
           <%}%>
         </li>
