--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -30,9 +30,9 @@
                         <label for="confirmPassword" class="form-label">Confirm Password</label>
                         <input type="password" class="form-control" id="confirmPassword" name="confirmPassword">
                       </div>
-                      <div class="d-flex justify-content-between row-6">
-                        <button type="submit" class="btn btnColor">Submit</button>
-                        <a href="/" class="col-3 btn btnColor width20">Back</a>
+                      <div class="d-flex justify-content-between row-6 phoneDisplay">
+                        <button type="submit" class="col-2 btn btnColor">Submit</button>
+                        <a href="/" class="col-2 btn btnColor phoneDisplayMT2">Back</a>
                       </div>
                   </form>
             </section>
