--- a/views/folder.ejs
+++ b/views/folder.ejs
@@ -26,7 +26,7 @@
                       class="pinPosition position-absolute zindex"
                       action="/praise/pinPraise/<%= praises[i]._id %>?_method=PUT"
                       method="POST">
-                      <button class="btn btnColor fa fa-thumbtack rounded-circle btn-lg" type="submit"></button>
+                      <button class="btn btnColor fa fa-thumbtack rounded-circle btn-lg" id="pinPhoneWidth" type="submit"></button>
                     </form>
           
                   </div>  
