--- a/views/feed.ejs
+++ b/views/feed.ejs
@@ -1,5 +1,5 @@
 <%- include('partials/header') -%>
-  <div class="container">
+  <div class="container feedPhonePadding">
     <div class="row gx-5 justify-content-center mt-5">
       <h2 class="greetingColor">Public Feed</h2>
       <ul class="row p-0 list-unstyled">
