--- a/views/praise.ejs
+++ b/views/praise.ejs
@@ -13,7 +13,7 @@
         <%if(praise.user == user.id){ %>
           <div class="d-flex marginAdjust">
           <form action="/praise/editPraise/<%= praise.id %>?_method=GET" method="POST" >
-            <button class="btn btnColor fa fa-edit" type="submit"></button>
+            <button class="btn btnColor fa fa-edit" id="pinPhoneWidth" type="submit"></button>
           </form>
         </div> 
         <%}%> 
@@ -26,7 +26,7 @@
             class="pinPosition position-absolute zindex"
             action="/praise/pinPraise/<%= praise.id %>?_method=PUT"
             method="POST">
-            <button class="btn btnColor fa fa-thumbtack rounded-circle btn-lg" type="submit"></button>
+            <button class="btn btnColor fa fa-thumbtack rounded-circle btn-lg" id="pinPhoneWidth" type="submit"></button>
           </form>
 
         </div>  
@@ -43,6 +43,7 @@
             <h5><%= praise.caption %></h5>
           </div>
           
+        <%if (praise.status == 'public'){ %>
           <div class="d-flex marginAdjust">
             <form action="/praise/likePraise/<%= praise.id %>?_method=PUT"
             method="POST">
@@ -50,8 +51,10 @@
             </form>
             <p class="ml1rem"><%= praise.likes %> likes</p>  
           </div>
-        </div>       
-        </div>
+          <%}%>
+
+      </div>       
+    </div>
 
     <div class="mt-3">
       <form action="/comment/createComment/<%=praise._id%>" method="POST">
