--- a/views/folder.ejs
+++ b/views/folder.ejs
@@ -4,7 +4,7 @@
     
     <div class="col-8">
       <div class="d-flex row-6 mt-5">
-        <h2 class="text-capitalize greetingColor">Hello<strong> <%= user.userName %></strong></h2> 
+        <h2 class="text-capitalize greetingColor">Hola<strong> <%= user.userName %></strong></h2> 
       </div>
 
         <div class="row-6 ">
